--- a/ParadigmaOOP1/ParadigmaOOP1.vcxproj
+++ b/ParadigmaOOP1/ParadigmaOOP1.vcxproj
@@ -129,6 +129,9 @@
   <ItemGroup>
     <ClCompile Include="ParadigmaOOP1.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="KomposisiJantung.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
