--- a/ParadigmaOOP1/ParadigmaOOP1.vcxproj
+++ b/ParadigmaOOP1/ParadigmaOOP1.vcxproj
@@ -131,6 +131,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="KomposisiJantung.h" />
+    <ClInclude Include="KomposisiManusia.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
